✨ webhooks (#28)
* ✨ handle webhooks

* ✨ start and end event hooks

* ✨ Webhook Handler for easy webhook service implementations

* ♻️ update due code review

* ♻️ changes due code review
