# docs/swagger.json
@@ -689,6 +689,72 @@
                 }
             }
         },
+        "/webhook": {
+            "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    },
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "webhook"
+                ],
+                "summary": "Receives employees registered webhooks",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/pkg.Webhook"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    },
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "webhook"
+                ],
+                "summary": "create a webhook",
+                "parameters": [
+                    {
+                        "description": "Webhook",
+                        "name": "webhook",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/pkg.Webhook"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.Webhook"
+                        }
+                    }
+                }
+            }
+        },
         "/workday": {
             "get": {
                 "security": [
@@ -1012,6 +1078,23 @@
                 },
                 "UserID": {
                     "type": "integer"
+                }
+            }
+        },
+        "pkg.Webhook": {
+            "type": "object",
+            "properties": {
+                "HeaderKey": {
+                    "type": "string"
+                },
+                "HeaderValue": {
+                    "type": "string"
+                },
+                "ReadOnly": {
+                    "type": "boolean"
+                },
+                "TargetURL": {
+                    "type": "string"
                 }
             }
         },
